Test Sandbox Project/src/objects/Agent_Achievement__c.object
<CustomObject>
    <fields>
        <fullName>QA_Badge2_W2__c</fullName>
        <formula>IF (QA_Score_W2__c &gt;= BS_QA_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (QA_Score_W2__c &gt;= BS_QA_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (QA_Score_W2__c &gt;= BS_QA_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (QA_Score_W2__c &gt;= BS_QA_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (QA_Score_W2__c &gt;= BS_QA_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA Badge2 (W2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Badge2_W3__c</fullName>
        <formula>IF (QA_Score_W3__c &gt;= BS_QA_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (QA_Score_W3__c &gt;= BS_QA_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (QA_Score_W3__c &gt;= BS_QA_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (QA_Score_W3__c &gt;= BS_QA_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (QA_Score_W3__c &gt;= BS_QA_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA Badge2 (W3)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Badge2__c</fullName>
        <formula>IF (QA_Score__c &gt;= BS_QA_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (QA_Score__c &gt;= BS_QA_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (QA_Score__c &gt;= BS_QA_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (QA_Score__c &gt;= BS_QA_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (QA_Score__c &gt;= BS_QA_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA Badge2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Badge__c</fullName>
        <formula>IF (QA_Score__c &gt;= BS_QA_1_Dewa__c, &quot;Dewa&quot;,
IF (QA_Score__c &gt;= BS_QA_2_Keren__c, &quot;Keren Abiz&quot;,
IF (QA_Score__c &gt;= BS_QA_3_Oleh__c, &quot;Oleh Uga&quot;,
IF (QA_Score__c &gt;= BS_QA_4_Mayan__c, &quot;Mayanlah&quot;,
IF (QA_Score__c &gt;= BS_QA_5_Cupu__c, &quot;Cupu&quot;,&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA_Badge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Count_W1__c</fullName>
        <label>QA_Count_W1</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Count_W2__c</fullName>
        <label>QA_Count_W2</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Count_W3__c</fullName>
        <label>QA_Count_W3</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Score_W1__c</fullName>
        <formula>IF (QA_Count_W1__c &gt; 0, QA_W1__c / QA_Count_W1__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA Score (W1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Score_W2__c</fullName>
        <formula>IF (QA_Count_W2__c &gt; 0, QA_W2__c / QA_Count_W2__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA Score (W2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Score_W3__c</fullName>
        <formula>IF (QA_Count_W3__c &gt; 0, QA_W3__c / QA_Count_W3__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA Score (W3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Score__c</fullName>
        <formula>(QA_Score_W1__c +
QA_Score_W2__c +
QA_Score_W3__c +
QA_Score_W4__c
) /
(
IF (QA_Count_W1__c &gt; 0,1,0) +
IF (QA_Count_W2__c &gt; 0,1,0) +
IF (QA_Count_W3__c &gt; 0,1,0) +
IF (QA_Count_W4__c &gt; 0,1,0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_W1__c</fullName>
        <label>QA_W1</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_W2__c</fullName>
        <label>QA_W2</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_W3__c</fullName>
        <label>QA_W3</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolved_Badge2_W1__c</fullName>
        <formula>IF (Resolved_Score_W1__c &gt;= BS_Resolved_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Resolved_Score_W1__c &gt;= BS_Resolved_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Resolved_Score_W1__c &gt;= BS_Resolved_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (Resolved_Score_W1__c &gt;= BS_Resolved_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Resolved_Score_W1__c &gt;= BS_Resolved_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved Badge2 (W1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolved_Badge2_W2__c</fullName>
        <formula>IF (Resolved_Score_W2__c &gt;= BS_Resolved_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Resolved_Score_W2__c &gt;= BS_Resolved_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Resolved_Score_W2__c &gt;= BS_Resolved_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (Resolved_Score_W2__c &gt;= BS_Resolved_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Resolved_Score_W2__c &gt;= BS_Resolved_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved Badge2 (W2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolved_Badge2_W3__c</fullName>
        <formula>IF (Resolved_Score_W3__c &gt;= BS_Resolved_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Resolved_Score_W3__c &gt;= BS_Resolved_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Resolved_Score_W3__c &gt;= BS_Resolved_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (Resolved_Score_W3__c &gt;= BS_Resolved_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Resolved_Score_W3__c &gt;= BS_Resolved_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved Badge2 (W3)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolved_Badge2__c</fullName>
        <formula>IF (Resolved_Score__c &gt;= BS_Resolved_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Resolved_Score__c &gt;= BS_Resolved_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Resolved_Score__c &gt;= BS_Resolved_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (Resolved_Score__c &gt;= BS_Resolved_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Resolved_Score__c &gt;= BS_Resolved_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved Badge2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolved_Badge__c</fullName>
        <formula>IF (Resolved_Score__c &gt;= BS_Resolved_1_Dewa__c, &quot;Dewa&quot;,
IF (Resolved_Score__c &gt;= BS_Resolved_2_Keren__c, &quot;Keren Abiz&quot;,
IF (Resolved_Score__c &gt;= BS_Resolved_3_Oleh__c, &quot;Oleh Uga&quot;,
IF (Resolved_Score__c &gt;= BS_Resolved_4_Mayan__c, &quot;Mayanlah&quot;,
IF (Resolved_Score__c &gt;= BS_Resolved_5_Cupu__c, &quot;Cupu&quot;,&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved Badge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolved_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolved Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolved_Score_W1__c</fullName>
        <formula>15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved Score (W1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolved_Score_W2__c</fullName>
        <formula>60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved Score (W2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolved_Score_W3__c</fullName>
        <formula>60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved Score (W3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolved_Score__c</fullName>
        <formula>(Resolved_Score_W1__c +
Resolved_Score_W2__c +
Resolved_Score_W3__c +
Resolved_Score_W4__c
) /
(
IF (Resolved_Score_W1__c &gt; 0,1,0) +
IF (Resolved_Score_W2__c &gt; 0,1,0) +
IF (Resolved_Score_W3__c &gt; 0,1,0) +
IF (Resolved_Score_W4__c &gt; 0,1,0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolved_W1__c</fullName>
        <label>Resolved W1</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolved_W2__c</fullName>
        <label>Resolved W2</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolved_W3__c</fullName>
        <label>Resolved W3</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Badge2_W1__c</fullName>
        <formula>IF (Response_Score_W1__c &gt;= BS_Response_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Response_Score_W1__c &gt;= BS_Response_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Response_Score_W1__c &gt;= BS_Response_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (Response_Score_W1__c &gt;= BS_Response_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Response_Score_W1__c &gt;= BS_Response_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Badge2 (W1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Badge2_W2__c</fullName>
        <formula>IF (Response_Score_W2__c &gt;= BS_Response_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Response_Score_W2__c &gt;= BS_Response_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Response_Score_W2__c &gt;= BS_Response_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (Response_Score_W2__c &gt;= BS_Response_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Response_Score_W2__c &gt;= BS_Response_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Badge2 (W2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Badge2_W3__c</fullName>
        <formula>IF (Response_Score_W3__c &gt;= BS_Response_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Response_Score_W3__c &gt;= BS_Response_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Response_Score_W3__c &gt;= BS_Response_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (Response_Score_W3__c &gt;= BS_Response_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Response_Score_W3__c &gt;= BS_Response_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Badge2 (W3)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Badge2__c</fullName>
        <formula>IF (Response_Score__c &gt;= BS_Response_1_Dewa__c, IMAGE(&quot;/resource/BS_Dewa&quot;,&quot;Dewa&quot; , 100, 100),
IF (Response_Score__c &gt;= BS_Response_2_Keren__c, IMAGE(&quot;/resource/BS_Keren&quot;,&quot;Keren Abiz&quot;, 100, 100),
IF (Response_Score__c &gt;= BS_Response_3_Oleh__c, IMAGE(&quot;/resource/BS_Oleh&quot;,&quot;Oleh Uga&quot; , 100, 100),
IF (Response_Score__c &gt;= BS_Response_4_Mayan__c, IMAGE(&quot;/resource/BS_Mayanlah&quot;,&quot;Mayanlah&quot; , 100, 100),
IF (Response_Score__c &gt;= BS_Response_5_Cupu__c, IMAGE(&quot;/resource/BS_Cupu&quot;,&quot;Cupu&quot; , 100, 100),&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Badge2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Badge__c</fullName>
        <formula>IF (Response_Score__c &gt;= BS_Response_1_Dewa__c, &quot;Dewa&quot;,
IF (Response_Score__c &gt;= BS_Response_2_Keren__c, &quot;Keren Abiz&quot;,
IF (Response_Score__c &gt;= BS_Response_3_Oleh__c, &quot;Oleh Uga&quot;,
IF (Response_Score__c &gt;= BS_Response_4_Mayan__c, &quot;Mayanlah&quot;,
IF (Response_Score__c &gt;= BS_Response_5_Cupu__c, &quot;Cupu&quot;,&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Badge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Response Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Score_W1__c</fullName>
        <formula>15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Score (W1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Score_W2__c</fullName>
        <formula>15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Score (W2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Score_W3__c</fullName>
        <formula>15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Score (W3)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Score__c</fullName>
        <formula>(Response_Score_W1__c +
Response_Score_W2__c +
Response_Score_W3__c +
Response_Score_W4__c
) /
(
IF (Response_Score_W1__c &gt; 0,1,0) +
IF (Response_Score_W2__c &gt; 0,1,0) +
IF (Response_Score_W3__c &gt; 0,1,0) +
IF (Response_Score_W4__c &gt; 0,1,0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_W1__c</fullName>
        <label>Response W1</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_W2__c</fullName>
        <label>Response W2</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_W3__c</fullName>
        <label>Response W3</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Badge__c</fullName>
        <formula>IF (Training_Score__c &gt;= Value($Label.BS_Train_1_Dewa), &quot;Dewa&quot;,
IF (Training_Score__c &gt;= Value($Label.BS_Train_2_Keren), &quot;Keren Abiz&quot;,
IF (Training_Score__c &gt;= Value($Label.BS_Train_3_Oleh), &quot;Oleh Uga&quot;,
IF (Training_Score__c &gt;= Value($Label.BS_Train_4_Mayan), &quot;Mayanlah&quot;,
IF (Training_Score__c &gt;= Value($Label.BS_Train_5_Cupu), &quot;Cupu&quot;,&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Badge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Score__c</fullName>
        <formula>100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>(TODAY() -
(
DATE(year(TODAY()),month(TODAY()),1) -
CASE( MOD( DATE(year(TODAY()),month(TODAY()),1) - DATE(1900, 1, 7), 7),
0, 3,
1, 4,
2, 5,
3, 6,
4, 0,
5, 1,
6, 2
,0)
)) / 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week ?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agent Achievement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_This_Month</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>All - This Month</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Agent Achievement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Achievement</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>